@@ -1,3 +1,9 @@
+myproxy-oauth (0.15-2+gt6.@distro@) @distro@; urgency=low
+
+  * Handle Ubuntu 14.04 apache2 configuation layout
+
+ -- Globus Toolkit <support@globus.org>  Fri, 01 August 2014 13:27:42 -0400
+
 myproxy-oauth (0.15-1+gt6.@distro@) @distro@; urgency=low
 
   * EC2-Aware public hostname
